<resources>
    <string name="app_name">Github</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">search</string>
    <string name="unknown">Unknown</string>
    <string name="star">Star</string>
    <string name="unstar">Unstar</string>
    <string name="branch_tip">Branches or tags</string>
    <string name="share">Share</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="copy_url">Copy URL</string>
    <string name="copy_clone_url">Copy clone URL</string>
    <string name="watch">Watch</string>
    <string name="watched">Watched</string>
    <string name="unwatch">Unwatch</string>
    <string name="unwatched">Unwatched</string>
    <string name="fork">Fork</string>
    <string name="fork_tag">Fork</string>
    <string name="forked">Forked</string>
    <string name="releases">Releases</string>
    <string name="wiki"
        translatable="false">Wiki</string>
    <string name="download_source_zip">Download source (zip)</string>
    <string name="download_source_tar">Download source (tar.gz)</string>
    <string name="bookmark">Bookmark</string>
    <string name="remove_bookmark">Remove bookmark</string>
    <string name="stargazers">Stargazers</string>
    <string name="forks">Forks</string>
    <string name="watchers">Watchers</string>
    <string name="readme">README</string>
    <string name="issues">Issues</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="created_at">Created at</string>
    <string name="forked_at">Forked at</string>
    <string name="latest_update">Latest update</string>
    <string name="latest_commit">Latest commit</string>
    <string name="forked_from">Forked from</string>
    <string name="just_now">just now</string>
    <string name="members">Members</string>
    <string name="view">View</string>
    <string name="organizations">Organizations</string>
    <string name="gists">Gists</string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    
    <string name="sort">Sort</string>
    <string name="sort_order">Sort order</string>
    <string name="best_match">Best match</string>
    <string name="most_stars">Most stars</string>
    <string name="fewest_stars">Fewest stars</string>
    <string name="most_forks">Most forks</string>
    <string name="fewest_forks">Fewest forks</string>
    <string name="recently_updated">Recently updated</string>
    <string name="least_recently_updated">Least recently updated</string>
    <string name="most_followers">Most followers</string>
    <string name="fewest_followers">Fewest followers</string>
    <string name="most_recently_joined">Most recently joined</string>
    <string name="least_recently_joined">Least recently joined</string>
    <string name="most_repositories">Most repositories</string>
    <string name="fewest_repositories">Fewest repositories</string>
    <string name="info">Info</string>
</resources>
