<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    android:id="@+id/scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_vertical_margin"
            android:layout_marginEnd="@dimen/card_view_horizontal_margin"
            android:layout_marginStart="@dimen/card_view_horizontal_margin"
            android:layout_marginTop="@dimen/card_view_vertical_margin"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:contentPadding="@dimen/spacing_normal">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
                <TextView
                    android:id="@+id/repoTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_large"/>
                
                <TextView
                    android:id="@+id/forkInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_small"
                    android:layout_marginTop="@dimen/spacing_mini"/>
                
                <TextView
                    android:id="@+id/repoDescText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_mini"
                    android:textSize="@dimen/text_small"
                    android:visibility="gone"/>
                
                <TextView
                    android:id="@+id/repoCreatedInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_mini"
                    android:textSize="@dimen/text_small"/>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="64dp">
                    
                    <LinearLayout
                        android:id="@+id/issueLay"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/spacing_mini"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">
                        
                        <TextView
                            android:id="@+id/issuesNumText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="@dimen/text_large"/>
                        
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/issues"
                            android:textSize="@dimen/text_mini"/>
                    </LinearLayout>
                    
                    <LinearLayout
                        android:id="@+id/stargazersLay"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/spacing_mini"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:orientation="vertical">
                        
                        <TextView
                            android:id="@+id/stargazersNumText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="@dimen/text_large"/>
                        
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stargazers"
                            android:textSize="@dimen/text_mini"/>
                    </LinearLayout>
                    
                    <LinearLayout
                        android:id="@+id/froksLay"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/spacing_mini"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:orientation="vertical">
                        
                        <TextView
                            android:id="@+id/forksNumText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="@dimen/text_large"/>
                        
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forks"
                            android:textSize="@dimen/text_mini"/>
                    </LinearLayout>
                    
                    <LinearLayout
                        android:id="@+id/watchersLay"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/spacing_mini"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:orientation="vertical">
                        
                        <TextView
                            android:id="@+id/watchersNumText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="@dimen/text_large"/>
                        
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/watchers"
                            android:textSize="@dimen/text_mini"/>
                    </LinearLayout>
                </LinearLayout>
            
            </LinearLayout>
        
        </android.support.v7.widget.CardView>
        
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_vertical_margin"
            android:layout_marginEnd="@dimen/card_view_horizontal_margin"
            android:layout_marginStart="@dimen/card_view_horizontal_margin"
            android:layout_marginTop="@dimen/card_view_vertical_margin"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:contentPaddingTop="@dimen/spacing_normal"
            app:contentPaddingBottom="@dimen/spacing_normal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/readmeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/readme"
                    android:textSize="@dimen/text_large"
                    android:layout_marginBottom="@dimen/spacing_mini"
                    android:layout_marginLeft="@dimen/spacing_normal"/>
                <WebView
                    android:id="@+id/webView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/readmeTitle"/>
                <ProgressBar
                    android:id="@+id/readmeLoader"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:indeterminate="false"
                    android:paddingEnd="@dimen/spacing_large"
                    android:paddingStart="@dimen/spacing_large"
                    android:layout_below="@+id/readmeTitle"/>
            </RelativeLayout>
        
        </android.support.v7.widget.CardView>
    
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
